terraform/ecc-aws-305-rds_database_instance_engine_no_default_ports/green/rds.tf
resource "aws_vpc" "this" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "305_vpc_green"
  }
}
resource "aws_subnet" "subnet1" {
  vpc_id            = aws_vpc.this.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "305_subnet1_green"
  }
}
resource "aws_subnet" "subnet2" {
  vpc_id            = aws_vpc.this.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1b"

  tags = {
    Name = "305_subnet2_green"
  }
}

resource "aws_security_group" "this" {
  name   = "305_security_group_green"
  vpc_id = aws_vpc.this.id

  ingress {
    from_port   = 3333
    to_port     = 3333
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.this.cidr_block]
  }
}

resource "aws_db_subnet_group" "this" {
  name       = "subnet-group-305-green"
  subnet_ids = [aws_subnet.subnet1.id, aws_subnet.subnet2.id]
}

resource "random_password" "this" {
  length           = 12
  special          = true
  numeric          = true
  override_special = "!#$%*()-_=+[]{}:?"
}

resource "aws_db_instance" "default" {
  identifier             = "database-305-green"
  allocated_storage      = 10
  engine                 = "mysql"
  engine_version         = "5.7"
  instance_class         = "db.t3.micro"
  db_name                = "database305green"
  username               = "root"
  port                   = 3333
  password               = random_password.this.result
  parameter_group_name   = "default.mysql5.7"
  skip_final_snapshot    = true
  db_subnet_group_name   = aws_db_subnet_group.this.id
  vpc_security_group_ids = ["${aws_security_group.this.id}"]

  tags = {
    Name = "305_db_instance_green"
  }
}
